# etude

./: .clang-format  CMakeLists.txt  README.md  graph.sh  test.sh
app/: CMakeLists.txt  etc_cli.cpp  repl.cpp
contrib/: PKGBUILD  some-fixes.patch
docs/: etc-dev-guide.md  experimental-syntax  export-syntax  export-syntax.et  functions.md  match-syntax  match-syntax.et  poly-id  structs.md  terminating-code-paths.et  todo.md  traits-syntax.et  transparent-virtual-calls  types.md
examples/: 1-factorial-expression.sb  10-sort-vec.sb  10-test-shouldfail-comparison.sb  10-test-shouldfail-timeout.sb  10-test-sort-vec.sb  11-test-ptr-assignment.sb  12-test-comparison.sb  13-sort-small.sb  14-struct-layout.sb  14-test-struct-layout.sb  15-library-vector.sb  15-test-library-vector.sb  16-test-fibonacci.sb  17-test-self-hosting.sb  19-test-tail-calls.sb  2-lambdas.sb  20-infer.sb  21-infer.sb  22-infer.sb  23-infer.sb  24-infer.sb  25-infer.sb  25-sort-rewrite.sb  4-structs.sb  (+13 more)
src/: CMakeLists.txt
src/ast/: declarations.hpp  expressions.hpp  module.hpp  patterns.hpp  statements.hpp  syntax_tree.hpp
src/ast/elaboration/: intrinsics.hpp  mark_intrinsics.cpp  mark_intrinsics.hpp  quantify_types.cpp  quantify_types.hpp
src/ast/scope/: builder_aux.cpp  context.cpp  context.hpp  context_builder.cpp  context_builder.hpp  environment.hpp  symbol.cpp  symbol.hpp
src/ast/visitors/: abort_visitor.hpp  evaluator.cpp  evaluator.hpp  just_walk_visitor.hpp  printing_visitor.hpp  return_visitor.hpp  template_visitor.hpp  type_checker.hpp  visitor.hpp
src/driver/: compil_driver.cpp  compil_driver.hpp  driver_errors.hpp  module.cpp  module.hpp
src/lex/: ident_table.hpp  lexer.cpp  lexer.hpp  lexer_aux.hpp  location.hpp  scanner.hpp  token.hpp  token_type.cpp  token_type.hpp
src/parse/: declarations.cpp  expr_arithmetic.cpp  expr_keyword.cpp  expr_postfix.cpp  expressions.cpp  module.cpp  parse.hpp  parse_decl.cpp  parse_declaration.cpp  parse_error.hpp  parse_expr.cpp  parse_expr_arith.cpp  parse_expr_keyword.cpp  parse_expr_postfix.cpp  parse_pat.cpp  parse_stmt.cpp  parse_type.cpp  parser.hpp  parser_aux.cpp  patterns.cpp  types.cpp
src/qbe/: gen_addr.hpp  gen_at.hpp  gen_match.hpp  ir_emitter.cpp  ir_emitter.hpp  ir_emitter_aux.cpp  measure.hpp  qbe_types.hpp  qbe_value.hpp
src/rt/: base_object.cpp  base_object.hpp  ifunction.hpp  intrinsic.hpp  native_function.hpp  primitive_object.cpp  primitive_object.hpp  primitive_type.cpp  primitive_type.hpp  runtime_error.hpp  type_error.hpp  user_defined_type.hpp
src/rt/functions/: function.hpp  intrinsic_print.hpp  native_function.hpp
src/rt/scope/: environment.hpp
src/rt/structs/: struct_object.hpp
src/types/: builtins.cpp  builtins.hpp  fn_type.hpp  struct_type.hpp  trait.cpp  trait.hpp  type.cpp  type.hpp  type_error.hpp  type_format.cpp  type_make.cpp  type_mangle.cpp  type_substitute.cpp  unify.cpp
src/types/check/: algorithm_w.cpp  algorithm_w.hpp  type_checker.cpp  type_checker.hpp  type_error.hpp
src/types/constraints/: generator.cpp  generator.hpp  solver.cpp  solver.hpp  trait.cpp  trait.hpp  unify.cpp
src/types/constraints/expand/: expand.cpp  expand.hpp
src/types/constraints/generate/: algorithm_w.cpp  algorithm_w.hpp
src/types/instantiate/: inst_driver.cpp  inst_visitor.cpp  instantiator.cpp  instantiator.hpp
src/types/repr/: builtins.cpp  builtins.hpp  fn_type.hpp  pointer_type.hpp  struct_type.hpp
src/vm/: chunk.hpp  decoder.hpp  elf_file.cpp  elf_file.hpp  instr.hpp  instr_translator.hpp  instr_type.cpp  instr_type.hpp  interpret.cpp  interpreter.cpp  interpreter.hpp  stack.hpp  stack_v2.hpp
src/vm/codegen/: compiler.cpp  compiler.hpp  compiler.hpp2  compiler_helpers.cpp  compiler_helpers.cpp2  compiler_visitor.cpp  compiler_visitor.cpp2  fat_instr.cpp  fat_instr.hpp  frame_translator.hpp
src/vm/codegen/detail/: function_symbol.hpp  measure.hpp  struct_symbol.hpp
src/vm/debug/: debug_info.hpp  debugger.cpp  debugger.hpp  disassember.cpp  disassember.hpp  stack_printer.cpp  stack_printer.hpp
src/vm/memory/: mem_access.hpp  stack_v2.hpp  vm_memory.hpp
src/vm/rt/: native_table.cpp  native_table.hpp  primitive.cpp  primitive.hpp  value.hpp
src/vm/rt/structs/: struct_object.hpp
tests/: CMakeLists.txt  main.cpp
tests/ast/: cases.cpp  environment.cpp  evaluation.cpp  rec.cpp  scope.cpp
tests/infer/: cases.cpp
tests/lex/: cases.cpp  test.lox
tests/parse/: cases.cpp
tests/qbe/: cases.cpp
tests/rt/: base_object.cpp  environment.cpp  primitive_type.cpp
tests/types/: cases.cpp  type_check.cpp
tests/vm/: cases.cpp  codegen.cpp  memory.cpp  tree.cpp
(+48 files in other folders)
